--- a/newToDo/package.json
+++ b/newToDo/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@mui/styles": "^5.10.10",
     "@reduxjs/toolkit": "^1.8.6",
     "@storybook/react": "^6.5.12",
     "@testing-library/jest-dom": "^5.14.1",
